test/files/neg/t1049.scala
class J {
    type tttt[a, b] <: _root_.scala.collection.mutable.Map[a, b]

    def r(aa : tttt[String, String]) = {
        0 match {
            case a : a.MapTo =>
        }
    }
}
