test/files/neg/t1049.check
t1049.scala:6: error: not found: value a
            case a : a.MapTo =>
                     ^
one error found
